--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "keystone": "^0.3.16",
     "async": "^1.5.0",
-    "underscore": "^1.8.3",
-    "moment": "^2.10.6",
     "cloudinary": "^1.2.4",
+    "dotenv": "^1.1.0",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.5",
-    "dotenv": "^1.1.0"
+    "keystone": "^0.3.16",
+    "moment": "^2.10.6",
+    "mongoose": "^4.4.19",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "graceful-fs": "^4.1.4",
-    "gulp": "^3.7.0",
-    "gulp-shell": "^0.5.0",
-    "gulp-watch": "^4.3.5"
+    "graceful-fs": "^4.1.4"
   },
   "engines": {
     "node": ">=0.10.22",
