--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "npm": ">=1.3.14"
   },
   "scripts": {
-    "start": "node keystone.js"
+    "start": "pm2 start keystone.js"
   },
   "main": "keystone.js"
 }
